--- a/TP2/makefile
+++ b/TP2/makefile
@@ -1,5 +1,5 @@
 CC = gcc
-exec = test_fork test_thread test_thread2_1 test_thread2_2 test_thread3_1 test_thread3_2 test_caractere test_mutex1 test_mutex2
+exec = test_fork test_thread test_thread2_1 test_thread2_2 test_thread3_1 test_thread3_2 test_caractere test_mutex1 test_mutex2 test_mutex3
 lib_thread = -lpthread
 
 all : $(exec)
@@ -29,6 +29,9 @@ test_mutex1 : test_mutex1.c
 	$(CC) $^ -o $@ $(lib_thread)
 
 test_mutex2 : test_mutex2.c
+	$(CC) $^ -o $@ $(lib_thread)
+
+test_mutex3 : test_mutex3.c
 	$(CC) $^ -o $@ $(lib_thread)
 
 clean :
