--- a/TP3/makefile
+++ b/TP3/makefile
@@ -1,14 +1,28 @@
 CC = gcc
-exec = q1
+BUILD_FOLDER := build
+exec = q1 q3 barbier_01 barbier_02 barbier_03 barbier_04
 lib = -lpthread
 
-all : $(exec)
+all : $(addprefix $(BUILD_FOLDER)/,$(exec))
 
-q1 : q1.c
+
+$(BUILD_FOLDER)/q1 : q1.c
 	$(CC) $^ -o $@ $(lib)
 
-q3 : q3.c
+$(BUILD_FOLDER)/q3 : q3.c
+	$(CC) $^ -o $@ $(lib)
+
+$(BUILD_FOLDER)/barbier_01: barbier_01.c
+	$(CC) $^ -o $@ $(lib)
+
+$(BUILD_FOLDER)/barbier_02: barbier_02.c
+	$(CC) $^ -o $@ $(lib)
+
+$(BUILD_FOLDER)/barbier_03: barbier_03.c
+	$(CC) $^ -o $@ $(lib)
+
+$(BUILD_FOLDER)/barbier_04: barbier_04.c
 	$(CC) $^ -o $@ $(lib)
 
 clean :
-	rm $(exec)
+	rm $(BUILD_FOLDER)/*
