TP5 - Init pipe part

--- a/TP5/makefile
+++ b/TP5/makefile
@@ -1,10 +1,15 @@
 CC = gcc
 BUILD_FOLDER := build
-exec = bal_1 bal_2 bal_3s bal_3c bal_4s bal_4c bal_5s bal_5c
+msg_exec = bal_1 bal_2 bal_3s bal_3c bal_4s bal_4c bal_5s bal_5c
+pipe_exec = tube_1
+exec = $(msg_exec) $(pipe_exec)
 lib = -lpthread
 
 all : $(addprefix $(BUILD_FOLDER)/,$(exec))
 
+msg : $(addprefix $(BUILD_FOLDER)/,$(msg_exec))
+
+pipe : $(addprefix $(BUILD_FOLDER)/,$(pipe_exec))
 
 $(BUILD_FOLDER)/bal_1 : bal_1.c
 	$(CC) $^ -o $@
@@ -29,6 +34,9 @@ $(BUILD_FOLDER)/bal_5c : bal_5c.c
 	$(CC) $^ -o $@ $(lib)
 
 $(BUILD_FOLDER)/bal_5s : bal_5s.c
+	$(CC) $^ -o $@ $(lib)
+
+$(BUILD_FOLDER)/tube_1 : tube_1.c
 	$(CC) $^ -o $@ $(lib)
 
 clean :
